2008-01-25  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Implement changes discussed on xdg list.
	Now we can add supported mimetypes by just using defaults.list
	We can also remove associations in defaults.list.

2008-01-25  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Don't make local copy of desktop file
	for mimetype changes if the file already
	supports the new mimetype.

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* ginputstream.c:
	* goutputstream.c:
	* gbufferedinputstream.c:
	* glocalfile.c: String improvements.  (#511966, 
	 Theppitak Karoonboonyanan)

2008-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gioscheduler.h: Expand docs a bit.

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * gdrive.[ch]:
	Add g_drive_get_identifier and
        g_drive_enumerate_identifiers

        * gvolume.[ch]:
        Add g_volume_get_identifier and
        g_volume_enumerate_identifiers
	
        * gio.symbols:
	Add symbols
	
        * gunixvolume.c:
	Implement identifiers for unix backend

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * gfile.h:
        * gio.symbols:
	Add g_file_copy_async() (#511580)
	Based on patch from Carlos Garcia Campos

2008-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gioscheduler.c: Some documentation additions.

2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	(g_desktop_app_info_new):
	Don't leak basename.
	
2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
        (g_desktop_app_info_new_from_filename):
	Don't leak GKeyFile

2008-01-22  Alexander Larsson  <alexl@redhat.com>

	* glocalfileinfo.c (get_thumbnail_attributes):
	Fix leak of uri

2008-01-22  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        (canonicalize_filename):
	Canonicalize paths that start with more than
	two slashes.
	
        * tests/g-file.c:
        (compare_two_files):