@@ -1,3 +1,13 @@
+2008-01-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gioscheduler.h: Make GIOSchedulerJobFunc return boolean
+	* gioscheduler.c: Keep calling io jobs until they return FALSE;
+	this allows big jobs to be executed in chunks, instead of blocking
+	the main loop for a long time.
+
+	* gsimpleasyncresult.c:
+	* giofile.c: Adapt callers.
+
 2008-01-25  Alexander Larsson  <alexl@redhat.com>
 
         * gdesktopappinfo.c:
